# fairly

./: .gitignore  ERRORS.md  TODO.md  docker-compose.yaml
.github/workflows/: sync-to-gitlab.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yaml  llm.py  main.py  models.py  presidio.py  prompt.py  pyproject.toml  test_hpc4ai.py
backend/test/: database_connection.py  test_hpc4ai.py
docs/: ERRORS.md  concurrency.md  error_handling.md
frontend/: README.md  background.js  config.example.js  config.js  contentScript.js  contentStyles.css  logger.js  manifest.json  popup.css  popup.html
frontend/content/: actions.js  analysis.js  constants.js  domUtils.js  icons.js  logger.js  popups.js  privacy.js  spans.js  ui.js
